--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dayjs": "^1.11.2",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-rate-limit": "^6.4.0",
     "lodash": "^4.17.21",
     "mongoose": "^6.3.4",
     "pino": "^7.11.0",
