--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-rate-limit": "^6.4.0",
+    "helmet": "^5.1.0",
     "lodash": "^4.17.21",
     "mongoose": "^6.3.4",
     "pino": "^7.11.0",
